test/bats/tests/constraints/all_cm_gatekeeper_label_unique.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueLabel
metadata:
  name: cm-gk-label-unique
  labels:
    gatekeeper.sh/tests: "yes"
spec:
  match:
    namespaces: ["gatekeeper-test-playground"]
    kinds:
      - apiGroups: [""]
        kinds: ["ConfigMap"]
  parameters:
    label: gatekeeper
