test/bats/tests/constraints/all_cm_must_have_gatekeeper-dryrun.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: cm-must-have-gk
  labels:
    gatekeeper.sh/tests: "yes"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["ConfigMap"]
    namespaces: ["gatekeeper-test-playground"]
  parameters:
    labels: ["gatekeeper"]
