test/bats/tests/constraints/all_cm_must_have_gatekeeper-warn.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: cm-must-have-gk
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["ConfigMap"]
    namespaces: ["gatekeeper-test-playground"]
  parameters:
    labels: ["gatekeeper"]
