test/bats/tests/constraints/all_cm_must_have_gatekeeper.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: cm-must-have-gk
  labels:
    gatekeeper.sh/tests: "yes"
spec:
  match:
    namespaces:
      - "gatekeeper-test-playground"
      - "gatekeeper-excluded-namespace"
      - "gatekeeper-excluded-prefix-match-namespace"
      - "gatekeeper-excluded-suffix-match-namespace"
    kinds:
      - apiGroups: [""]
        kinds: ["ConfigMap"]
  parameters:
    labels: ["gatekeeper"]
