test/bats/tests/constraints/all_ns_must_have_label_provided_vapbinding_scoped.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabelsVap
metadata:
  name: all-must-have-label
  labels:
    "gatekeeper.sh/use-vap": "yes"
spec:
  enforcementAction: scoped
  scopedEnforcementActions:
  - action: deny
    enforcementPoints:
    - name: validation.k8s.io
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    message: "All namespaces must have an `owner` label that points to your company username"
    labels:
      - key: owner
        allowedRegex: "^[a-zA-Z]+.agilebank.demo$"
