test/bats/tests/constraints/containers_must_be_limited.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: container-must-have-limits
  labels:
    gatekeeper.sh/tests: "yes"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["gatekeeper-test-playground"]
  parameters:
    cpu: "200m"
    memory: "1Gi"
