test/bats/tests/constraints/ns_must_sync.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-sync
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    labelSelector:
      matchLabels:
        name: no-dupes

  parameters:
    labels: ["it-wont-have-this-label"]
