test/bats/tests/constraints/all_cm_must_have_gatekeeper_audit.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: cm-must-have-gk-audit
  labels:
    gatekeeper.sh/tests: "yes"
spec:
  match:
    namespaces: ["gatekeeper-test-playground"]
    kinds:
      - apiGroups: [""]
        kinds: ["ConfigMap"]
    labelSelector:
      matchLabels:
        test.gatekeeper.sh/audit: "yes"
  parameters:
    labels: ["gatekeeper"]
