test/bats/tests/constraints/all_cm_must_have_gatekeeper_scoped.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: cm-must-have-gk-scoped
  labels:
    gatekeeper.sh/tests: "yes"
spec:
  enforcementAction: scoped
  scopedEnforcementActions:
    - action: deny
      enforcementPoints:
        - name: audit.gatekeeper.sh
    - action: warn
      enforcementPoints:
        - name: validation.gatekeeper.sh
  match:
    namespaces: ["gatekeeper-test-playground-scoped"]
    labelSelector:
      matchLabels:
        test.gatekeeper.sh/audit: "yes"
    kinds:
      - apiGroups: [""]
        kinds: ["ConfigMap"]
  parameters:
    labels: ["gatekeeper"]
